<resources>
    <string name="app_name">Karya</string>

    <string name="Weekly_Overview">Weekly overview</string>
    <string name="eg_range">Jan 01 - Jan 07</string>
    <string name="eg_message">You are doing good!</string>
    <string name="eg_followup_message">You almost reached your daily goals</string>
    <string name="Tasks">Tasks</string>
    <string name="Goals">Goals</string>
    <string name="Reminders">Reminders</string>
    <string name="Daily_Tasks">Daily Tasks</string>
    <string name="Monthly_Goals">Monthly Goals</string>
    <string name="Weekly_Goals">Weekly Goals</string>
    <string name="Upcoming_Events">Upcoming Events</string>
    <string name="Custom_taskList">Create custom task list</string>
    <string name="date">01/01/2025</string>
    <string name="Task_counter">4/7</string>
    <string name="Add_more_tasks">+ Add more tasks</string>
    <string name="Done">Done</string>
    <string name="Cancel">Cancel</string>

    <string name="Set_a_reminder">Set a reminder</string>
    <string name="Add_title_here">Add title here</string>
    <string name="Description">Description</string>
    <string name="Time">9:30 AM</string>

    <string name="Delete_all">Delete all</string>
    <string name="Mark_all_completed">Mark all completed</string>
    <string name="sort_by">Sort by</string>
    <string name="num">75%</string>
    <string name="days_count">Days: 07/30</string>
    <string name="eg_TaskName">Task Name</string>
    <string name="Monthly_Overview">Monthly Overview</string>
    <string name="eg_taskProgress">10/30</string>

    <string name="event_name">Board meeting</string>
    <string name="timings">Timings</string>
    <string name="eg_timing">11:00 am</string>
    <string name="eg_eventDate">17</string>
    <string name="value">Value</string>
    <string name="add_new_goal">Add new goal</string>
    <string name="goal_image">Goal image</string>
    <string name="Enter_goal_name">Enter goal name</string>
    <string name="Target_days_or_amount">Target: days or amount</string>
    <string name="set_priority_type">Set priority type</string>
    <string name="low">Low</string>
    <string name="med">Medium</string>
    <string name="high">High</string>

    <string name="select_image">Select an Image</string>
    <string name="add_new_task">Add new task</string>
    <string name="task_image">Task image</string>

</resources>