<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/surface_light"
    android:layout_gravity="center"
    android:elevation="8dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_goal"
            android:textSize="20sp"
            android:textColor="@color/text_light"
            android:fontFamily="@font/lato_bold"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <FrameLayout
            android:id="@+id/goalImageContainer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/custom_upload_container"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/goalImagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:scaleType="center"/>
            
            <ImageView
                android:id="@+id/btnAddImage"
                android:layout_width="24dp"
                android:layout_height="24sp"
                android:src="@drawable/icon_plus_black4x"
                android:layout_gravity="center"/>
        </FrameLayout>

        <TextView
            android:id="@+id/txtGoalImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_image"
            android:textSize="14sp"
            android:textColor="@color/text_light"
            android:fontFamily="@font/lato_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/goalImageContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/edtGoalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/Enter_goal_name"
            android:textColor="@color/text_light"
            android:fontFamily="@font/lato_regular"
            android:background="@drawable/custom_background_edittext"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/txtGoalImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/edtGoalTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/Target_days_or_amount"
            android:textColor="@color/text_light"
            android:fontFamily="@font/lato_regular"
            android:background="@drawable/custom_background_edittext"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtGoalName"/>

        <TextView
            android:id="@+id/txtPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_priority_type"
            android:textColor="@color/text_light"
            android:textSize="14sp"
            android:fontFamily="@font/lato_regular"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/edtGoalTarget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/priorityChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:singleSelection="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/txtPriority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLow"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:clickable="true"
                android:textColor="@color/text_light"
                app:chipBackgroundColor="@color/surface_light"
                app:chipStrokeColor="@color/background_dark"
                app:chipStrokeWidth="1dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMed"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/med"
                android:clickable="true"
                android:textColor="@color/text_light"
                app:chipBackgroundColor="@color/surface_light"
                app:chipStrokeColor="@color/background_dark"
                app:chipStrokeWidth="1dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHigh"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:clickable="true"
                android:textColor="@color/text_light"
                app:chipBackgroundColor="@color/surface_light"
                app:chipStrokeColor="@color/background_dark"
                app:chipStrokeWidth="1dp"/>
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/txtBtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textSize="20sp"
            android:textColor="@color/text_hint"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toStartOf="@+id/txtBtnDone"
            app:layout_constraintTop_toBottomOf="@id/priorityChipGroup"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txtBtnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Done"
            android:textColor="@color/text_light"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/priorityChipGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>