<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/surface_light"
    android:layout_gravity="center"
    android:elevation="8dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_task"
            android:textSize="20sp"
            android:textColor="@color/text_light"
            android:fontFamily="@font/lato_bold"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <FrameLayout
            android:id="@+id/taskImageContainer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/custom_upload_container"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/taskImagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:padding="2dp"
                android:scaleType="fitCenter"/>

            <ImageView
                android:id="@+id/btnAddImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="32dp"
                android:src="@drawable/icon_plus_black4x"
                android:layout_gravity="center"/>
        </FrameLayout>

        <TextView
            android:id="@+id/txtTaskImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_image"
            android:textSize="16sp"
            android:textColor="@color/text_light"
            android:fontFamily="@font/lato_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/taskImageContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/edtTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/Enter_goal_name"
            android:textColor="@color/text_light"
            android:fontFamily="@font/lato_regular"
            android:background="@drawable/custom_background_edittext"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/txtTaskImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtBtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textSize="20sp"
            android:textColor="@color/text_hint"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toStartOf="@+id/txtBtnDone"
            app:layout_constraintTop_toBottomOf="@id/edtTaskName"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txtBtnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Done"
            android:textColor="@color/text_light"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/edtTaskName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>