<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Set_a_reminder"
            android:textSize="20sp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/edtReminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:background="@drawable/custom_background_edittext"
            android:hint="@string/Add_title_here"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calenderSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:background="@drawable/custom_background_edittext"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/edtReminderTitle">

            <EditText
                android:id="@+id/edtReminderDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:maxHeight="52dp"
                android:background="@color/white"
                android:hint="@string/date"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_regular"
                android:inputType="date"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/divider"/>

            <View
                android:id="@+id/divider"
                android:layout_width="2dp"
                android:layout_height="32dp"
                android:background="@color/surface_dark"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imgBtnCalender"/>

            <ImageButton
                android:id="@+id/imgBtnCalender"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/calender_black_outline_4x"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timeSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:background="@drawable/custom_background_edittext"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/calenderSection">

            <EditText
                android:id="@+id/edtReminderTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/Time"
                android:inputType="time"
                android:maxHeight="48dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="2dp"
                android:layout_height="32dp"
                android:background="@color/surface_dark"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imgBtnTime"/>

            <ImageButton
                android:id="@+id/imgBtnTime"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/clock_outline_4x"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Done"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_regular"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/timeSection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textSize="20sp"
            android:textColor="@color/text_hint"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toStartOf="@id/btnDone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeSection"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>